# UAV_SUPER

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
uav_localization/: CMakeLists.txt  README.md  package.xml
uav_localization/config/: demo_3d.rviz  mapping_3d.rviz  mid360_3d.lua  mid360_3d_localization.lua
uav_localization/launch/: localization_mid360.launch  mapping_mid360.launch
uav_localization/script/: livox_to_pointcloud2.py
uav_localization/urdf/: uav_super.urdf
uav_locatiation/: CMakeLists.txt  package.xml
uav_locatiation/launch/: global_localization_in_sim.launch  global_planner.launch  global_planner_in_sim.launch
uav_locatiation/rviz/: global_planner.rviz
uav_locatiation/src/: transform_fusion.cpp
uav_location/: AGENTS.md  CMakeLists.txt  README.md  package.xml
uav_location/launch/: fast_ofio.launch  global_mapping.launch  global_planner.launch  global_planner_in_sim.launch  icp_registration.launch  local_mapping.launch  local_planner.launch
uav_location/rviz/: global_planner.rviz
uav_location/src/: global_localization.cpp  odom_republisher.cpp  publish_initial_pose.cpp  transform_fusion.cpp
uav_location/src/fast_ofio/: AGENTS.md  fast_ofio_node.cpp  ofio_estimator.cpp  ofio_estimator.h  ofio_types.h
uav_location/src/icp_registration/: icp_registration_node.cpp
uav_planner/: AGENTS.md  CMakeLists.txt  README.md  package.xml
uav_planner/include/uav_planner/: astar_searcher.h  astar_show_obs.h
uav_planner/launch/: astar_planner.launch  octomap_publisher.launch  planner_path_simplify.launch  planner_path_smoothify.launch
uav_planner/src/: simple_path_follower.cpp  transform_path.cpp
uav_planner/src/astar/: astar_planner_node.cpp  astar_searcher.cpp  astar_visualization.cpp
uav_planner/src/path_simplify/: DP_path_simplify.cpp  greedy_path_simplify.cpp  path_downsampling.cpp  simple_path_simplify.cpp
uav_planner/src/path_smoothify/: bezier_path_smoothify.cpp  discrete_curve_path_smoothify.cpp
uav_planner/src/simple_path_follower/: fast_path_follower.cpp  fforward_path_follower.cpp  simple_path_follower.cpp  visual_path_follower.cpp  visual_path_follower.h
uav_planner/src/slp_planner/: pca_direction_node.cpp
uav_px4_ctrl/: CLAUDE.md  CMakeLists.txt  README.md  package.xml
uav_px4_ctrl/launch/: goal_publisher.launch  mission_manger.launch  px4ctrl.launch  uav_super.launch  uav_super_localization.launch  uav_super_mapping.launch  waypoint_publisher.launch
uav_px4_ctrl/script/: convert_tf_to_odom.py
uav_px4_ctrl/src/: mission_manger.cpp  pub_goal.cpp  pub_waypoint.cpp  px4ctrl_node.cpp  subscribe.cpp  subscribe.h
uav_px4_ctrl/src/px4ctrl/: subscribe.cpp  subscribe.h
uav_px4_ctrl/srv/: TakeoffNotify.srv
uav_px4_ctrl_test/: AGENTS.md  CMakeLists.txt  README.md  package.xml
uav_px4_ctrl_test/include/: px4_vel_simple_test.launch
uav_px4_ctrl_test/launch/: px4_vel_simple_test.launch  uav_super_px4_livox.launch
uav_px4_ctrl_test/src/: odometry_to_px4.cpp  px4_pos_rectangle.cpp  px4_pos_takeoff.cpp  px4_pos_up-and-down.cpp  px4_rectangle.cpp  px4_takeoff.cpp  px4_vel_rectangle.cpp  px4_vel_simple_test.cpp
uav_topic_trans/: CMakeLists.txt  package.xml
uav_topic_trans/launch/: uav_super_fast_lio.launch  uav_super_px4_livox.launch
uav_tracker/: AGENTS.md  CMakeLists.txt  README.md  package.xml
uav_tracker/cfg/: AstraColorHSV.cfg
uav_tracker/include/uav_tracker/: KCF_Tracker.h  PID.cpp  PID.h  ffttools.h  fhog.cpp  fhog.h  kcftracker.cpp  kcftracker.h  labdata.h  recttools.h  tracker.h
uav_tracker/launch/: AstraTracker.launch  KCFTracker.launch
uav_tracker/script/: AstraTrackerHSV.text  astra_Tracker.py  astra_common.py
uav_tracker/src/: KCF_Tracker.cpp  KCF_Tracker_control.cpp
uav_util/: AGENTS.md  CMakeLists.txt  README.md  package.xml
uav_util/launch/: generate_pcd_map.launch  imu_health_check.launch  imu_to_odom.launch  merge_cloud.launch  pcd_downsample.launch  simple_camera.launch
uav_util/rviz/: imu_to_odom.rviz
uav_util/script/: compare_topic_timestamps.py
uav_util/src/: generate_pcd_map.cpp  generate_pcd_map_old.cpp  merge_cloud_node.cpp  pcd_downsample_node.cpp  simple_camera_driver.cpp
uav_util/src/imu_to_odom/: imu_health_check_node.cpp  imu_to_odom.hpp  imu_to_odom_node.cpp
