<?xml version="1.0"?>
<package format="2">
    <name>uav_tracker</name>
    <version>0.0.0</version>
    <description>The uav_tracker package</description>
    <maintainer email="orangepi@todo.todo">orangepi</maintainer>
    <license>TODO</license>

    <buildtool_depend>catkin</buildtool_depend>
    <build_depend>roscpp</build_depend>
    <build_depend>rosmsg</build_depend>
    <build_depend>rospy</build_depend>
    <build_export_depend>roscpp</build_export_depend>
    <build_export_depend>rosmsg</build_export_depend>
    <build_export_depend>rospy</build_export_depend>
    <exec_depend>roscpp</exec_depend>
    <exec_depend>rosmsg</exec_depend>
    <exec_depend>rospy</exec_depend>
    <build_depend>cv_bridge</build_depend>
    <build_depend>opencv2</build_depend>
    <build_depend>image_transport</build_depend>
    <build_depend>std_msgs</build_depend>
    <build_depend>sensor_msgs</build_depend>
    <build_depend>geometry_msgs</build_depend>
    <build_depend>mavros_msgs</build_depend>
    <build_depend>tf2</build_depend>
    <build_export_depend>cv_bridge</build_export_depend>
    <build_export_depend>opencv2</build_export_depend>
    <build_export_depend>image_transport</build_export_depend>
    <build_export_depend>std_msgs</build_export_depend>
    <build_export_depend>sensor_msgs</build_export_depend>
    <build_export_depend>geometry_msgs</build_export_depend>
    <build_export_depend>mavros_msgs</build_export_depend>
    <build_export_depend>tf2</build_export_depend>
    <exec_depend>cv_bridge</exec_depend>
    <exec_depend>opencv2</exec_depend>
    <exec_depend>image_transport</exec_depend>
    <exec_depend>std_msgs</exec_depend>
    <exec_depend>sensor_msgs</exec_depend>
    <exec_depend>geometry_msgs</exec_depend>
    <exec_depend>mavros_msgs</exec_depend>
    <exec_depend>tf2</exec_depend>
    <build_depend>dynamic_reconfigure</build_depend>
    <build_export_depend>dynamic_reconfigure</build_export_depend>
    <exec_depend>dynamic_reconfigure</exec_depend>

    <!-- The export tag contains other, unspecified, tags -->
    <export>
        <!-- Other tools can request additional information be placed here -->

    </export>
</package>
